# ai-creator

./: BUILD_DIAGNOSTIC.bat  COMPILATION_GUIDE.md  DESIGN_NOTES.md  INSTALL.bat  INSTALLER_GUIDE.md  INSTALL_FIXED.bat  NATIVE_APP_BUILD_GUIDE.md  PROJECT_README.md  QUICK_INSTALL.bat  QUICK_INSTALL_FIXED.bat  QUICK_INSTALL_VS2026.bat  QUICK_START.md  README.md  README_INSTALLER.md  WEB_INTEGRATION.md  package.json  setup_wizard.ps1
.github/workflows/: build-windows.yml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Navigation.tsx
client/src/pages/: AIModels.tsx  CreateAI.tsx  Dashboard.tsx  Documentation.tsx  Home.tsx  Settings.tsx
cpp-backend/: BUILD_GUIDE.md  CMakeLists.txt  README.md  build_linux.sh  build_macos.sh  build_windows.bat
cpp-backend/include/: ai_model.h  compiler.h  compiler_dll.h  data_loader.h  data_loader_dll.h  decision_tree.h  decision_tree_dll.h  dll_exports.h  model_manager.h  model_manager_dll.h  neural_network.h  neural_network_dll.h  types.h
cpp-backend/include/gui/: create_ai_page.h  dashboard_page.h  home_page.h  main_window.h  models_page.h  settings_page.h  ui_utils.h
cpp-backend/libs/: README.md
cpp-backend/models/: README.md
cpp-backend/public/: index.html
cpp-backend/public/__manus__/: version.json
cpp-backend/public/assets/: index-DKuYe1bA.js  index-e-I46Eu0.css
cpp-backend/src/: ai_model.cpp  compiler.cpp  data_loader.cpp  decision_tree.cpp  main.cpp  model_manager.cpp  neural_network.cpp
cpp-backend/src/gui/: create_ai_page.cpp  dashboard_page.cpp  home_page.cpp  main_window.cpp  models_page.cpp  settings_page.cpp  ui_utils.cpp
cpp-backend/web/: builder.html  index.html  lab.html  models.html  nn-ai.html  playground.html  script.js  storage.html  styles.css
